--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -136,6 +136,10 @@
 }
 
 @media screen and (max-width: 768px) {
+  .about__container {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
   .about__text-wrap {
     width: 300px;
     margin: 70px 0 93px;
@@ -151,8 +155,17 @@
   }
 
   .about__wrapper {
-    flex-direction: column;
+    /*flex-direction: column;*/
     align-items: center;
+  }
+  .about__text {
+    margin-bottom: 93px;
+    font-size: 12px;
+    line-height: 18px;
+  }
+  .about__title {
+    font-size: 22px;
+    line-height: 27px;
   }
 }
 
