--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-  padding: 0 70px 0;
-  background-color: #fafafa;
+  /*padding: 0 70px 0;*/
+  background-color: #F8F8F8;
   max-width: 1280px;
   margin: 0 auto;
 }
@@ -8,7 +8,8 @@
 .footer__container {
 
   margin: 0 auto;
-  padding: 80px 0 20px;
+  padding: 80px 70px 20px;
+
 }
 
 .footer__text {
