--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -16,3 +16,12 @@ margin-right: 10px;
   border: none;
   border-radius: 10px;
 }
+@media screen and (max-width: 576px) {
+  .navtab {
+    margin-bottom: 17px;
+  }
+  .navtab__btn {
+    width: 82px;
+    height: 26px;
+  }
+}
