--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -16,8 +16,7 @@
   border-radius: 10px;
   width: 1200px;
   align-items: center;
-  margin: 0 auto;
-;
+  margin: 0 auto;;
 }
 
 .promo__title {
@@ -30,3 +29,32 @@
   margin-bottom: 151px;
   margin-top: 160px;
 }
+@media screen and (max-width: 768px) {
+  .promo__wrapper {
+    max-width: 728px;
+  }
+  .promo__title {
+    margin-top: 350px;
+    margin-bottom: 314px;
+    font-size: 40px;
+    line-height: 52px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .promo__title {
+    font-size: 29px;
+    line-height: 37px;
+    letter-spacing: -0.04em;
+    max-width: 100%;
+    margin-top: 220px;
+    margin-bottom: 212px;
+  }
+  .promo__container {
+    max-width: 292px;
+  }
+  .promo__wrapper {
+    max-width: 292px;
+  }
+}
+
