feat: сверстать главную страницу

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,44 +1,191 @@
 .header {
   max-width: 1280px;
   margin: 0 auto;
+}
+.header__container {
+  max-width: 1280px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
+  padding: 0 70px;
+  margin: 0 auto;
+}
+
+.header__wrapper {
+  display: flex;
+  align-items: center;
 }
 
 .header__logo {
-  height: 38px;
-  width: 38px;
   margin: 18px 0;
 }
 
-.header__wrap {
+.header__btn-signin {
   display: flex;
+  justify-content: center;
   align-items: center;
+  width: 76px;
+  height: 32px;
+
+  margin: 21px 0;
+  padding: 0;
+
+  border: none;
+  border-radius: 3px;
+  background-color: #3456F3;
+  color: white;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
+  text-decoration:none;
+  cursor: pointer;
+  transition: transform linear 0.3s;
 }
 
-.header__container {
-  display: flex;
-  justify-content: space-between;
-  padding-left: 70px;
-  padding-right: 70px;
-  align-items: center;
+.header__btn-signin:hover {
+  transform: scale(1.1);
 }
 
-.header__registration-text {
-  font-style: normal;
+.header__btn-account {
+  width: 26px;
+  height: 30px;
+
+  border-radius: 4px;
+  border: solid 1px #f9f9f9;
+  background-color: #f9f9f9;
+  background-image: url("../../images/account-btn-icon.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+  transition: linear 0.4s;
+  transition-property: transform, border;
+}
+
+.header__btn-account:hover {
+  transform: scale(1.3);
+  border: solid 1px black;
+}
+
+.header__sign-text {
+  margin: 0 30px;
+  color: black;
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
-  margin-right: 30px;
+  text-decoration: none;
+  transition: opacity linear 0.5s;
 }
 
-.header__login-button {
-  width: 76px;
-  height: 32px;
-  background-color: #3456F3;
-  border-radius: 3px;
-  border: none;
-  color: white;
+.header__sign-text:hover {
+  opacity: 0.6;
+  text-decoration: underline;
 }
+
+.header__sign-text_color_black {
+  margin-right: 17px;
+
+  font-size: 14px;
+  color: #000;
+}
+
+.header__sign-text_color_white {
+  margin-right: 30px;
+
+  font-size: 12px;
+  color: #fff;
+}
+
+.header__burger {
+  width: 28px;
+  height: 23px;
+  display: none;
+  cursor: pointer;
+  z-index: 3;
+}
+
+.header__burger-line {
+  width: 28px;
+  height: 3px;
+  background-color: #000;
+  margin: 0px auto 7px;
+  transition: 0.4s;
+}
+
+.header__burger-line:last-of-type {
+  margin: 0px auto 0;
+}
+
+.header__burger_active .header__burger-line:nth-of-type(1) {
+  -webkit-transform: rotate(-45deg) translate(-6px, 6px) ;
+  transform: rotate(-45deg) translate(-7px, 6px) ;
+}
+
+.header__burger_active .header__burger-line:nth-of-type(2) {
+  opacity: 0;
+}
+
+.header__burger_active .header__burger-line:nth-of-type(3) {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+  transform: rotate(45deg) translate(-8px, -8px) ;
+}
+
+.header__burger-menu-wrap {
+  visibility: hidden;
+  top: 0;
+  right: 0;
+  position: fixed;
+  width: 65%;
+  height: 100vh;
+  background-color: #fff;
+  z-index: 2;
+}
+
+.header__burger-menu-wrap_active {
+  visibility: visible;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.header__burger-nav {
+  margin-top: 160px;
+}
+
+.header__burger-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  row-gap: 28px;
+}
+
+.header__burger-item {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+}
+
+.header__burger-link {
+  color: #000;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 22px;
+}
+
+.header__burger-link:hover {
+  text-decoration: underline;
+}
+
+.header__wrapper_burger-menu {
+  position: absolute;
+  bottom: 90px;
+  left: 35%;
+}
+
 @media screen and (max-width: 1280px) {
   .header__container {
     padding: 0 50px;
