--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -13,8 +13,8 @@
 .card__icon {
   display: none;
   position: absolute;
-  right: 14px;
-  top: 14px;
+  right: 5px;
+  top: 5px;
   transition: linear .4s;
   cursor: pointer;
 }
@@ -31,6 +31,7 @@
   margin: 14px 14px 0;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .card__name {
