--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -41,6 +41,15 @@
   text-align: center;
 }
 
+.search__input:focus {
+  /*outline: 1px solid #3456F3;*/
+  border: none;
+  border-radius: 2pt;
+  box-shadow: 0 0 0 1pt #3456F3;
+  outline: none;
+  transition: .5s;
+}
+
 .search__submit {
   width: 58px;
   height: 34px;
@@ -77,9 +86,11 @@
   .search {
     padding: 80px 14px 80px;
   }
+
   .search__icon {
     display: none;
   }
+
   .search__input {
     text-align: start;
     font-weight: 500;
